click here to add task

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id="container">
         <input type="text" id="input" placeholder="Enter your text here">
-        <button id="btn">AddToDo</button>
+        <button id="btn">Click here to add Task</button>
         <ul class="ul" style="list-style-type: none;"></ul>
     </div>
 </body>
